<resources>
    <string name="app_name">Unit Converter</string>
    <string name="enter_value">Enter value</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="convert">Convert</string>
    
    <!-- New strings for ToDoListActivity -->
    <string name="enter_task">Create a new todo&#8230;</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="todo_list_title">Task Tango with Berry</string>
</resources>